taxonomy updates, code of conduct, contributing

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -7,12 +7,6 @@ origin:
 origin-description:
   other: The countries where goods are manufactured.
 
-nationality:
-  other: nationality
-
-nationality-description:
-  other: The countries where the brand is managed.
-
 parent:
   other: parent
 
@@ -25,7 +19,7 @@ links:
 vendors:
   other: vendors
 
-# taxonomies; origin and nationality
+# taxonomies; origin
 usa:
   other: USA
 canada:
@@ -42,3 +36,5 @@ japan:
   other: Japan
 belgium:
   other: Belgium
+unknown:
+  unknown: Unknown
