origin -> origins as it is an array

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -1,10 +1,10 @@
 categories:
   other: categories
 
-origin:
-  other: origin
+origins:
+  other: origins
 
-origin-description:
+origins-description:
   other: The countries where goods are manufactured.
 
 parent:
