update 404 page, add temporary favicon

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -21,3 +21,9 @@ links:
 
 vendors:
   other: vendors
+
+"404":
+  other: "404: Not Found"
+
+page-not-found:
+  other: Sorry, the page you requested doesn't exist.
